Fix city name and location pin alignments

--- a/style.css
+++ b/style.css
@@ -70,6 +70,9 @@ i {
 }
 
 .city {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 35px;
     font-weight: 500;
     margin-bottom: 10px;
